@@ -5,3 +5,4 @@ inventory = [item_id, item_laptop, item_money]
 
 # Start game at the reception
 current_room = rooms["Reception"]
+gibberish = 0
