@@ -5,3 +5,4 @@ CHANGELOG:
 added comments where needed
 see line 255 for explination of some changes.} - Luca
 {Removed changelog from gitignore so it actually gets updated ;) } - James
+{Began work on fail conditions} - Luca
